# ProvaPraticaSicurezzaInformatica

codice/1_SHA256/src/: compress_blocks.hpp  compress_data.hpp  round_data.hpp  sha256.cpp  sha256.hpp  sha256_util.hpp  tb_sha256.cpp
codice/2_CSE/: cse_sha256.py  cse_util.py
codice/3_Driver/Jupyter/: example_design.bit  example_design.hwh  example_design.tcl  sha256.ipynb
codice/3_Driver/Jupyter/DriverC/sha256/: CMakeLists.txt
codice/3_Driver/Jupyter/DriverC/sha256/src/: sha256_thread.c
